News in 3.38.1, 2020-11-20
--------------------------
* Translation updates.

News in 3.38.0, 2020-09-11
--------------------------
* Translation updates.

News in 3.37.1, 2020-05-29
--------------------------
* Enable WebKitGTK sandbox.
* Add more keyboard shortcuts to zoom actions.
* Improvements to the build system.
* Improvement to the Flatpak.
* Translation updates.

News in 3.36.2, 2020-04-25
--------------------------
* Fix RTL (right-to-left text locale) bug.
* Translation updates.

News in 3.36.1, 2020-03-26
--------------------------
* AppData: add <releases> tag for the Flatpak.
* Translation updates.

News in 3.36.0, 2020-03-05
--------------------------
* Translation updates.

News in 3.35.90, 2020-01-30
---------------------------
* Create page about professional services for Devhelp.
* A few improvements to the build system.
* Write more user documentation.
* Fix a minor bug with the Ctrl+F keyboard shortcut.
* Start to apply REUSE recommendations for copyright and license information.
  https://reuse.software/
* Use a few new GLib APIs.
* Translation updates.

News in 3.34.0, 2019-09-09
--------------------------
* Enable back-forward swipe gesture in the HTML pages.
* Write more contributor docs.
* Translation updates.

News in 3.32.0, 2019-03-10
--------------------------
* GNOME goal “App menu retirement”:
  https://gitlab.gnome.org/GNOME/Initiatives/issues/4
* GNOME goal “App Icon Redesign”:
  https://gitlab.gnome.org/GNOME/Initiatives/issues/2
  (yes Devhelp has a new icon now).
* A few minor and irrelevant improvements to the code.
* A pile of translation updates as usual.

News in 3.30.1, 2018-10-24
--------------------------
* Build: requires Meson >= 0.47.
* Translation updates.

News in 3.30.0, 2018-07-16
--------------------------
* A few small improvements.
* Translation updates.

News in 3.29.3, 2018-06-17
--------------------------
* Devhelp has moved to the GNOME GitLab instance. The bugzilla tickets have not