@@ -1,3 +1,10 @@
+News in 40.alpha, 2021-01-11
+----------------------------
+* New GNOME versioning scheme.
+* Build: add plugin_emacs, plugin_gedit and plugin_vim options.
+* Improve the Shortcuts window.
+* Translation updates.
+
 News in 3.38.1, 2020-11-20
 --------------------------
 * Translation updates.
